--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,24 @@ html,
 body {
   font-size: 62.5%;
 }
+
+::-webkit-scrollbar {
+  width: 0.8rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 5rem;
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 5rem;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
