--- a/src/components/predict/styles/predictsinglevalue.module.css
+++ b/src/components/predict/styles/predictsinglevalue.module.css
@@ -1,5 +1,3 @@
-
-
 .inputLabel {
   font-size: 1.6rem;
   margin-bottom: 1rem;
@@ -11,4 +9,5 @@
 
 .inputField {
   flex: 1;
+  font-size: 1.6rem;
 }
